--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LABGUARD - Gordon College</title>
   <link rel="icon" href="./assets/icons/logo-image.png" type="image/png">
-  <link rel="stylesheet" href="/css/login.css"/>
+  <link rel="stylesheet" href="css/login.css"/>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
@@ -85,4 +85,5 @@
     <script src="./js/togglepassword.js"></script>
 </body>
 </html>
+
 
